# EasyDSP

./: .gitignore  README.md  functional_design_dsp.drawio  functional_design_system.drawio
control_software/Python/: bleScanner.py
control_software/protocol/: communication_protocol.drawio
device_firmware/: CMakeLists.txt  SigmaDSP_parameters.h  device_firmware.code-workspace  functional_design_firmware.drawio  sdkconfig  sdkconfig.old
device_firmware/main/: CMakeLists.txt  ble.c  ble.h  buffer.c  buffer.h  device_settings.c  device_settings.h  dsp_control.c  dsp_control.h  easydsp_firmware.c  eeprom.c  eeprom.h  event.c  event.h  interface_ble.c  interface_ble.h  led.c  led.h  parser.c  parser.h  sigma_dsp.c  sigma_dsp.h  sigma_dsp_module_data.h  sigma_dsp_parameters.h  sigma_dsp_program_data.h  task_ble.c  task_dsp_task.c  task_interface_ble.c  task_interfaces.c  task_settings_task.c
device_firmware/sigma_studio_project/: easydsp.dspproj
device_firmware/sigma_studio_project/IC 1_easydsp/: as_code.enc  net_list.cir2
device_firmware/sigma_studio_project/easydsp_IC 2/: E2Prom.Hex
device_firmware/sigma_studio_project/export/: defines.h  easydsp.hex  easydsp.params  easydsp.xml  easydsp_IC_1.h  easydsp_IC_1_PARAM.h  easydsp_IC_1_REG.h  easydsp_IC_2.h  easydsp_IC_2_PARAM.h  easydsp_IC_2_REG.h  easydsp_NetList.xml
hardware_design/dsp_board/: #auto_saved_files#  dsp_board.kicad_pcb  dsp_board.kicad_prl  dsp_board.kicad_pro  dsp_board.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
hardware_design/programmer_board/: #auto_saved_files#  programmer_board.csv  programmer_board.kicad_pcb  programmer_board.kicad_prl  programmer_board.kicad_pro  programmer_board.kicad_sch  programmer_board.xml
(+49 files in other folders)
