idf_component_register(SRCS "easydsp_firmware.c"
                            "eeprom.c"
                            "device_settings.c"
                            "sigma_dsp.c"
                            "dsp_control.c"
                            "event.c"
                            "ble.c"
                            "task_settings_task.c"
                            "task_ble.c"
                            "task_dsp_task.c"
                    INCLUDE_DIRS "/")
