idf_component_register(SRCS "easydsp_firmware.c"
                            "eeprom.c"
                            "device_settings.c"
                            "sigma_dsp.c"
                            "dsp_control.c"
                            "event.c"
                            "task_settings_task.c"
                            "ble.c"
                            "task_interfaces.c"
                            "task_dsp_task.c"
                    INCLUDE_DIRS "/")
